--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,8 @@ h3 {
   margin: 20px;
 }
 
+
+
 .certifications {
   animation-duration: 0.5s;
   animation-name: animate-fade;
@@ -228,6 +230,23 @@ footer {
 
 /******************************* FORMULARIO *******************************/
 
+
+#inicio {
+  text-align: center;
+}
+
+#inicio label {
+  text-align: left;
+}
+
+#titulo_contato {
+  margin-top: 300px;
+}
+
+#mapa {
+  height: 20%;
+}
+
 #topoformulario {
   display: flex;
   gap: 100px;
@@ -257,6 +276,7 @@ label {
   display: block;
   padding-bottom: 20px;
   font-size: 20px;
+  width: 8%;
 }
 
 input {
@@ -301,11 +321,20 @@ button:active {
   height: 50px;
 }
 
+label,
+input,
+button,
+textarea,
+iframe
+{
+  margin: 10px;
+
+}
 /******************************* MOBILE *******************************/
 
 @media only screen and (max-width: 768px) {
   header {
-    gap: 400px;
+    gap: 70%;
   }
 
   #dropdown_hamburguer {
