--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,6 @@ form:focus-within {
 
 label {
   display: block;
-  padding-bottom: 20px;
   font-size: 20px;
   width: 8%;
 }
@@ -282,6 +281,7 @@ label {
 input {
   margin-bottom: 10px;
   font-size: 16px;
+  padding-left: 12px
 }
 
 textarea {
