--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,8 +180,6 @@ h3 {
   margin: 20px;
 }
 
-
-
 .certifications {
   animation-duration: 0.5s;
   animation-name: animate-fade;
@@ -236,7 +234,6 @@ footer {
 
 /******************************* FORMULARIO *******************************/
 
-
 #inicio {
   text-align: center;
 }
@@ -287,7 +284,7 @@ label {
 input {
   margin-bottom: 10px;
   font-size: 16px;
-  padding-left: 12px
+  padding-left: 12px;
 }
 
 textarea {
@@ -331,10 +328,8 @@ label,
 input,
 button,
 textarea,
-iframe
-{
+iframe {
   margin: 10px;
-
 }
 /******************************* MOBILE *******************************/
 
@@ -418,9 +413,9 @@ iframe
       transform: rotate(-0.13turn);
     }
   }
-h1 {
-  margin-top: 1000px;
-}
+  h1 {
+    margin-top: 1000px;
+  }
   #navbar {
     display: flex;
   }
