--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,23 @@
   --color-active: #222222;
 }
 
+body::-webkit-scrollbar,
+textarea::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track,
+textarea::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(42, 36, 36, 0.3);
+}
+
+body::-webkit-scrollbar-thumb,
+textarea::-webkit-scrollbar-thumb {
+background-color: var(--bg-color);
+outline: 1px solid slategrey;
+border-radius: 45px;
+}
+
 body {
   display: flex;
   justify-content: center;
@@ -36,11 +53,16 @@ body {
   cursor: pointer;
 }
 
+#theme_forms {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
 header {
   display: flex;
   min-width: 100%;
   justify-content: space-around;
-  padding: 0px 20px;
   align-items: center;
   height: 100px;
   background-color: #ffffff;
@@ -53,7 +75,7 @@ header {
 }
 
 h1 {
-  margin-top: 600px;
+  margin-top: 800px;
   margin-left: 20px;
 }
 #navbar {
@@ -176,6 +198,7 @@ td {
 img,
 h2,
 p,
+hr,
 h3 {
   margin: 20px;
 }
@@ -336,7 +359,7 @@ iframe {
 @media only screen and (max-width: 768px) {
   header {
     gap: 30%;
-    padding-top: 16px;
+    padding-top: 8px;
   }
 
   #dropdown_hamburguer {
